stuck with a bug

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -6,6 +6,8 @@ body {
 
 h1 {
     margin: 2rem auto;
+    font-size: large;
+    color: blue;
 }
 
 
